.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:58:04 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
..\src\Validaciones.c: In function 'validarFlotante':
..\src\Validaciones.c:6:34: error: invalid operands to binary == (have 'float' and 'char *')
    6 |  if(pResultado != NULL && numero == "%f"){
      |                                  ^~
      |                                  |
      |                                  char *
12:58:07 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
..\src\Validaciones.c: In function 'validarFlotante':
..\src\Validaciones.c:6:34: error: invalid operands to binary == (have 'float' and 'char *')
    6 |  if(pResultado != NULL && numero == "%f"){
      |                                  ^~
      |                                  |
      |                                  char *
12:58:08 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
..\src\Validaciones.c: In function 'validarFlotante':
..\src\Validaciones.c:6:34: error: invalid operands to binary == (have 'float' and 'char *')
    6 |  if(pResultado != NULL && numero == "%f"){
      |                                  ^~
      |                                  |
      |                                  char *
12:58:26 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
13:09:54 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-3.1.o" "..\\src\\Ejercicio-3.1.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
13:10:10 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
13:11:02 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
13:11:55 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file Ejercicio-3.1.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
13:11:56 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
Info: Nothing to build for Ejercicio-3.1
13:13:52 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Validaciones.o" "..\\src\\Validaciones.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
13:14:35 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-3.1.o" "..\\src\\Ejercicio-3.1.c" 
..\src\Ejercicio-3.1.c: In function 'main':
..\src\Ejercicio-3.1.c:18:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'float *' [-Wformat=]
   18 |  scanf("%d", &numeroFlotante);
      |         ~^   ~~~~~~~~~~~~~~~
      |          |   |
      |          |   float *
      |          int *
      |         %e
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
13:14:48 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-3.1.o" "..\\src\\Ejercicio-3.1.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
13:20:33 **** Incremental Build of configuration Debug for project Ejercicio-3.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-3.1.o" "..\\src\\Ejercicio-3.1.c" 
gcc -o Ejercicio-3.1.exe "src\\Ejercicio-3.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.1
